--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,23 @@
----
-theme :
-  name : twitter
----
-{% include JB/setup %}
-{% include themes/twitter/default.html %}
+<!DOCTYPE html>
+<html lang="en">
+
+  {% include head.html %}
+
+  <body>
+
+    {% include header.html %}
+
+    <section class="main-content">
+      <div class="wrapper">
+        {{ content }}
+      </div>
+    </div>
+
+    {% include footer.html %}
+
+
+  </body>
+
+    {% include scripts.html %}
+
+</html>
