--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,6 @@ layout: default
     {{ content }}
   </div>
 
-<a href="{{ site.url }}{{ site.baseurl }}"><h3 style="text-align: center;">- to blog -</h3></a>
+<a href="/"><h3 style="text-align: center;">- to blog -</h3></a>
 
 </article>
