--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,18 @@
 <html lang="en">
 
   {% include head.html %}
-
+<div class="homepage-hero-module">
+    <div class="video-container">
+        <div class="filter"></div>
+        <video autoplay loop class="fillWidth">
+            <source src="{{ site.url }}{{ site.baseurl }}/img/Mp4/Beach-Ball.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
+            <source src="{{ site.url }}{{ site.baseurl }}/img/Webm/Beach-Ball.Webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
+        </video>
+        <div class="poster hidden">
+            <img src="{{ site.url }}{{ site.baseurl }}/img/Snapshot/Beach-Ball.jpeg" alt="">
+        </div>
+    </div>
+</div>
   <body>
 
     {% include header.html %}
